<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tutorial4_back"
    android:layoutDirection="ltr"
    tools:context=".fragments.Tutorial4">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="22sp">

        <TextView
            android:id="@+id/tv_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="24dp"
            android:text="@string/skip"
            android:textColor="#9795A8"
            android:textSize="12sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|start"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:src="@drawable/illustration_share" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="2dp"
            android:text="@string/share_invoice"
            android:textColor="#190865"
            android:textSize="23sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="8dp"
            android:text="@string/share_invoices_via_sms_whatsapp_nemail_link_and_qr_code"
            android:textColor="#9795A8"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:src="@drawable/lines_switching_4" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="22sp">

        <Button
            android:id="@+id/btn_get_started"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/btn_default"
            android:fontFamily="@font/prompt"
            android:text="@string/get_started"
            android:textAllCaps="false"
            android:textSize="20sp" />

    </RelativeLayout>

</FrameLayout>
