<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tutorial3_back"
    android:layoutDirection="ltr"
    tools:context=".fragments.Tutorial3">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="22sp">

        <TextView
            android:id="@+id/tv_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="24dp"
            android:text="@string/skip"
            android:textColor="#F3F3F3"
            android:textSize="12sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|start"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:src="@drawable/illustration_reports" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="2dp"
            android:text="@string/reports"
            android:textColor="#FFFFFF"
            android:textSize="23sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="8dp"
            android:text="@string/view_and_download_comprehensive_nreports"
            android:textColor="#F3F3F3"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:src="@drawable/lines_switching_3" />

    </LinearLayout>

</FrameLayout>