<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#190865"
    tools:context=".fragments.UserLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4">

            <ImageView
                android:id="@+id/hesabe_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="22dp"
                android:layout_marginTop="42dp"
                android:src="@drawable/logo_hesabe_white" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:layout_weight="0.6"
            android:background="@drawable/rectangle_bg"
            android:orientation="vertical"
            android:padding="22dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="22dp"
                android:paddingHorizontal="10dp"
                android:text="@string/login_to_continue"
                android:textAlignment="viewStart"
                android:textColor="@color/dark_blue"
                android:textSize="17sp" />

            <RadioGroup
                android:id="@+id/rbg_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="22dp"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp">

                <RadioButton
                    android:id="@+id/rb_en"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:button="@drawable/rb_lang"

                    android:checked="true"
                    android:paddingStart="5dp"
                    android:paddingEnd="0dp"
                    android:tag="en"
                    android:text="@string/english"
                    android:textColor="@color/dark_blue"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/rb_ar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:button="@drawable/rb_lang"
                    android:paddingStart="5dp"
                    android:paddingEnd="0dp"
                    android:tag="ar"
                    android:text="@string/arabic"
                    android:textColor="@color/dark_blue"
                    android:textSize="15sp" />

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                android:background="@android:color/transparent"
                app:passwordToggleEnabled="false">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text"
                    android:drawableStart="@drawable/ic_profile_inactive"
                    android:drawablePadding="12dp"
                    android:hint="@string/Username"
                    android:inputType="textEmailAddress"
                    android:paddingVertical="22dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/textfieldcolor"
                    android:textColorHint="#707070"
                    android:paddingBottom="8dp"
                    android:textCursorDrawable="@null"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                android:background="@android:color/transparent"
                app:passwordToggleDrawable="@drawable/show_password_selector"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/et_Password_Layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text"
                    android:drawableStart="@mipmap/ic_general_password_gray_login"
                    android:drawablePadding="12dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingVertical="22dp"
                    android:paddingBottom="8dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/textfieldcolor"
                    android:textColorHint="#707070"
                    android:textCursorDrawable="@null"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/forgot_password"
                android:textColor="@color/dark_blue"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="22sp">

        <Button
            android:id="@+id/btn_login"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/btn_default"
            android:fontFamily="@font/prompt"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="20sp" />

    </RelativeLayout>

</RelativeLayout>
