<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#190865"
    tools:context=".fragments.ResetPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4">

            <ImageView
                android:id="@+id/hesabe_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="22dp"
                android:layout_marginTop="42dp"
                android:src="@drawable/logo_hesabe_white" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:layout_weight="0.6"
            android:background="@drawable/rectangle_bg"
            android:orientation="vertical"
            android:padding="22dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="28dp"
                android:paddingHorizontal="10dp"
                android:text="@string/password_reset"
                android:textColor="@color/dark_blue"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/et_secret_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#707070"
                android:drawableStart="@drawable/ic_secret_code"
                android:drawablePadding="12dp"
                android:hint="@string/enter_secret_code_received_on_e_mail"
                android:inputType="text"
                android:paddingHorizontal="12dp"
                android:paddingVertical="22dp"
                android:textAlignment="viewStart"
                android:textColorHint="#707070"
                android:textColor="@color/textfieldcolor"
                android:textSize="15sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#707070"
                app:passwordToggleDrawable="@drawable/show_password_selector"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:backgroundTint="#707070"
                    android:drawableStart="@mipmap/ic_general_password_gray_login"
                    android:drawablePadding="12dp"
                    android:hint="@string/enter_new_password"
                    android:inputType="textPassword"
                    android:paddingVertical="22dp"
                    android:textAlignment="viewStart"
                    android:textColorHint="#707070"
                    android:textColor="@color/textfieldcolor"
                    android:textSize="15sp"
                    app:boxBackgroundColor="@android:color/transparent" />

            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#707070"
                android:drawableStart="@mipmap/ic_general_password_gray_login"
                android:drawablePadding="12dp"
                android:hint="@string/confirm_new_password"
                android:inputType="textPassword"
                android:paddingHorizontal="12dp"
                android:paddingVertical="22dp"
                android:textAlignment="viewStart"
                android:textColorHint="#707070"
                android:textColor="@color/textfieldcolor"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="22sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_cancel"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:layout_weight="0.8"
                android:background="@drawable/btn_default"
                android:fontFamily="@font/prompt"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_resetPassword"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:background="@drawable/btn_default"
                android:fontFamily="@font/prompt"
                android:text="@string/reset_password"
                android:textAllCaps="false"
                android:textSize="20sp" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
