<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#190865"
    tools:context=".fragments.ForgotPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4">

            <ImageView
                android:id="@+id/hesabe_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="22dp"
                android:layout_marginTop="42dp"
                android:src="@drawable/logo_hesabe_white" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:layout_weight="0.6"
            android:background="@drawable/rectangle_bg"
            android:orientation="vertical"
            android:padding="22dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="28dp"
                android:paddingHorizontal="10dp"
                android:text="@string/password_reset"
                android:textColor="@color/dark_blue"
                android:textSize="17sp" />


            <EditText
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#707070"
                android:drawableStart="@drawable/ic_profile_inactive"
                android:drawablePadding="12dp"
                android:hint="@string/Username"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="12dp"
                android:paddingVertical="22dp"
                android:textAlignment="viewStart"
                android:textColor="@color/textfieldcolor"
                android:background="@drawable/bg_edit_text"
                android:textColorHint="#707070"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="22sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_cancel"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:layout_weight="1"
                android:background="@drawable/btn_default"
                android:fontFamily="@font/prompt"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_submit"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:background="@drawable/btn_default"
                android:fontFamily="@font/prompt"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textSize="20sp" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
